improve readability and correct layout

--- a/style/style.css
+++ b/style/style.css
@@ -78,7 +78,7 @@ header .head-side .icon-field img {
 .card--wrapper {
   margin: 2.5rem 0;
   overflow: hidden;
-  border-radius: 10px;
+  border-radius: 6px;
   transition: border-radius 200ms ease;
   box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
 }
@@ -146,7 +146,7 @@ header .head-side .icon-field img {
   overflow-y: auto;
   transform: translateX(-240%);
   height: 100%;
-  padding: 1rem 25% 1rem 2rem;
+  padding: 0.5rem 25% 0.5rem 0.7rem;
   min-width: 75%;
   direction: rtl;
   opacity: 0;
@@ -220,15 +220,13 @@ header .head-side .icon-field img {
 
 .card-img {
   min-height: 100%;
-  height: 100%;
+  min-width: 100%;
   object-fit: cover;
 }
 
 picture {
   display: flex;
-  width: 100%;
-  height: 100%;
-  max-width: fit-content;
+  min-width: 100%;
 }
 
 @media (max-width: 575.98px) {
@@ -248,7 +246,7 @@ picture {
     flex-direction: column;
   }
 
-  .card {
+  .card--wrapper {
     width: 90vw;
     height: 45vw;
   }
@@ -265,9 +263,10 @@ picture {
     transform: translateY(-50%);
   }
 
-  .card {
+  .card--wrapper {
     width: 65vw;
     height: 32.5vw;
   }
 }
 
+/*# sourceMappingURL=style.css.map */
